# khoregos

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  k6s.yaml.example  package-lock.json  package.json  pyproject.toml  vitest.config.ts
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
plugin/.claude-plugin/: plugin.json
src/: index.ts  version.ts
src/cli/: audit.ts  compliance.ts  dashboard.ts  doctor.ts  hook.ts  index.ts  init.ts  session.ts  shared.ts  team.ts
src/daemon/: manager.ts
src/engine/: audit.ts  boundaries.ts  checkpoint.ts  classification.ts  dashboard-template.ts  dashboard.ts  dependencies.ts  doctor.ts  event-types.ts  events.ts  langfuse.ts  locks.ts  plugins.ts  redaction.ts  report.ts  severity.ts  signing.ts  state.ts  telemetry.ts  timestamp.ts  transcript-store.ts  webhooks.ts
src/k6s/: __init__.py
src/mcp/: server.ts
src/models/: agent.ts  audit.ts  config.ts  context.ts  session.ts
src/presets/: compliance-iso27001.ts  compliance-soc2.ts  index.ts  microservices.ts  minimal.ts  monorepo.ts  security-strict.ts
src/store/: db.ts  migrations.ts
src/watcher/: fs.ts
tests/: __init__.py  conftest.py  helpers.ts  test_audit.py  test_boundaries.py  test_locks.py  test_state.py  test_store.py  version.test.ts
tests/cli/: audit-prune.test.ts  audit-report.test.ts  audit-timestamp.test.ts  compliance.test.ts  dashboard.test.ts  hook-duration.test.ts  hook-post-tool-use.integration.test.ts  hook-safe-action.test.ts  hook-self-repair.test.ts  init-presets.integration.test.ts  team-commands.integration.test.ts  team-telemetry-daemon.test.ts
(+60 files in other folders)
